Adding the preselection and add note feat

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -44,7 +44,8 @@
       <div class="card-body">
         <div class="row no-gutters
           align-items-center">
-          <div class="col mr-2">
+          <div class="col mr-2" [routerLink]="['/projet']"
+            style="cursor: pointer;">
             <div class="text-xs
               font-weight-bold
               text-success text-uppercase
@@ -70,7 +71,8 @@
       <div class="card-body">
         <div class="row no-gutters
           align-items-center">
-          <div class="col mr-2">
+          <div class="col mr-2" (click)="getProjetPreselectionner()"
+            style="cursor: pointer;">
             <div class="text-xs
               font-weight-bold text-info
               text-uppercase mb-1">Préselectionnés
