Adding the logout feat

--- a/src/app/vertical-nav/vertical-nav.component.html
+++ b/src/app/vertical-nav/vertical-nav.component.html
@@ -16,7 +16,7 @@
 
   <!-- Nav Item - Dashboard -->
   <li class="nav-item active">
-    <a class="nav-link" [routerLink]="['/home']">
+    <a class="nav-link" [routerLink]="['/accueil']">
       <i class="fas fa-fw fa-tachometer-alt"></i>
       <span>Tableau de bord</span></a>
   </li>
