--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -10,7 +10,7 @@
     min-height: 100vh;
     width: 100vw;
     display: flex;
-    background: url('/Users/mac/Downloads/BLABLA/gestion_concours_superviseur-main/src/assets/ressources/jeuxC.jpeg') no-repeat; 
+    background: url('./assets/ressources/jeuxC.jpeg') no-repeat; 
     align-items: center;
     justify-content: center;
     background-size: cover;
