--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -14,7 +14,7 @@
     </head>
     <body>
 
-<img src="/Users/mac/Downloads/BLABLA/gestion_concours_superviseur-main/src/assets/ressources/galsen.svg.png" class="logo">
+<img src="./assets/ressources/galsen.svg.png" class="logo">
 
 <div class="form-container">
     <form action="" id="form">
