--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -82,7 +82,7 @@
               <div class="col-auto">
                 <div class="h5 mb-0 mr-3
                   font-weight-bold
-                  text-gray-800">7</div>
+                  text-gray-800">{{statistique.nb_projets_preselectionne}}</div>
               </div>
               <div class="col">
 
@@ -114,7 +114,7 @@
               Votes</div>
             <div class="h5 mb-0
               font-weight-bold
-              text-gray-800">{{statistique.nb_votes}}</div>
+              text-gray-800">{{statistique.nb_votants}}</div>
           </div>
           <div class="col-auto">
             <i class="fas fa-vote-yea fa-2x
