--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer class="sticky-footer bg-white">
-    <div class="container my-auto">
-        <div class="copyright text-center my-auto">
-            <span>Copyright &copy; Your Website 2021</span>
-        </div>
+  <div class="container my-auto">
+    <div class="copyright text-center my-auto">
+      <span>Copyright &copy; Groupe 2 - NoSQL 2021</span>
     </div>
+  </div>
 </footer>
