--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,42 +1,34 @@
-<!-- <form>
-  <input type="text" name="login" [(ngModel)]="adminAccess.login">
-  <input type="password" name="password" [(ngModel)]="adminAccess.password">
-  <button class="btn btn-info" (click)="connection()">Connexion</button>
-</form> -->
+<div class="row m-auto p-5 align-middle">
 
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="login.component.css">
-    <link rel="stylesheet"
-      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
-      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
-      crossorigin="anonymous" />
-  </head>
-  <body>
-
-    <img src="./assets/ressources/galsen.svg.png" class="logo">
-
-    <div class="form-container">
-      <form action="" id="form">
-        <h3>Connexion</h3>
-
-        <i class="fas fa-user"></i>
-        <input type="text" placeholder="Nom de votre équipe" name="login"
-          [(ngModel)]="adminAccess.login" /><br>
-
-        <!-- <i class="fas fa-at"></i>
-        <input type="email" placeholder="Email de votre équipe"/><br> -->
-        <i class="fas fa-lock"></i>
-        <input type="password" placeholder="Mot de passe" name="password"
-          [(ngModel)]="adminAccess.password" /><br>
-
-        <!-- <input type="submit" value="Se connecter" (click)="connection()"> -->
-        <button class="btn btn-info" (click)="connection()">Connexion</button>
-      </form>
+  <div class="col-lg-6 mb-4">
+    <img src="../../assets/img/logo-ptn.png" class="card-img bg-dark" alt="">
+    <div class="fw-bold mt-3">
+      <ngtypewriter [StringList]='list' [speed]='1000'></ngtypewriter>
     </div>
+  </div>
 
-  </body>
-</html>
+  <div class="form-container col-lg-6">
+    <form action="" id="form">
+      <h3>Connexion</h3>
+
+      <p>Login</p>
+      <div class="form-group">
+        <input type="text" placeholder="Login" class="form-control"
+          name="login"
+          [(ngModel)]="adminAccess.login" /><br>
+      </div>
+
+      <p>Mot de passe</p>
+      <div class="form-group">
+        <input type="password" placeholder="Mot de passe" class="form-control"
+          name="password"
+          [(ngModel)]="adminAccess.password" />
+      </div>
+      <br>
+
+      <!-- <input type="submit" value="Se connecter" (click)="connection()"> -->
+      <button class="btn btn-info col-md-12" (click)="connection()">Connexion</button>
+    </form>
+  </div>
+
+</div>
